--- a/download.html
+++ b/download.html
@@ -16,6 +16,7 @@
         <ul class="horizontal">
             <li><a href="index.html">Accueil</a></li>
             <li><a class="active" href="download.html">Téléchargement</a></li>
+            <li><a href="install.html">Installation / Désinstallation</a></li>
             <li><a href="backup.html">Sauvegardes</a></li>
             <li><a href="problem.html">Signaler un problème</a></li>
             <li><a href="choice.html">Choix de traduction</a></li>
@@ -46,9 +47,9 @@
                     <ul>
                         <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Lémurien -> Lémuriens </li>
                         <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Les images de "Lémuriens" et
-                            "ancêtres" ont été inversés</li>
+                            "ancêtres" ont été inversées</li>
                         <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Les images de "communauté" et
-                            "protection" ont été inversés</li>
+                            "protection" ont été inversées</li>
                         <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : les tuiles ont changé d'ordre et
                             lorsqu'elles sont dans le bon ordre, les déterminants apparaissent pour former une phrase
                         </li>
@@ -502,9 +503,9 @@
                     <ul>
                         <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Lémurien -> Lémuriens </li>
                         <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Les images de "Lémuriens" et
-                            "ancêtres" ont été inversés</li>
+                            "ancêtres" ont été inversées</li>
                         <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Les images de "communauté" et
-                            "protection" ont été inversés</li>
+                            "protection" ont été inversées</li>
                         <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : les tuiles ont changé d'ordre et
                             lorsqu'elles sont dans le bon ordre, les déterminants apparaissent pour former une phrase
                         </li>
@@ -513,6 +514,7 @@
                     </ul>
                     Changements mineurs :
                     <ul>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Salle du conseil : LES COMMUNES -> LA COMMUNE</li>
                         <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : ajout de * = aucun déterminant
                         </li>
                         <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : squelette de -> squelette de */l'
