--- a/problem.html
+++ b/problem.html
@@ -16,6 +16,7 @@
         <ul class="horizontal">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="download.html">Téléchargement</a></li>
+            <li><a href="install.html">Installation / Désinstallation</a></li>
             <li><a href="backup.html">Sauvegardes</a></li>
             <li><a class="active" href="problem.html">Signaler un problème</a></li>
             <li><a href="choice.html">Choix de traduction</a></li>
