Updated russian translator

--- a/credits.html
+++ b/credits.html
@@ -32,8 +32,7 @@
 
         <h4>CONSEIL POUR L'INSTALLEUR</h4>
         <p><a href="https://ohgoru.tistory.com/19">ohgoru (Traduction Coréenne)</a></p>
-        <p><a
-                href="https://www.playground.ru/case_of_the_golden_idol/file/the_case_of_the_golden_idol_rusifikator_teksta_v1_5_trapezia-1658836">trapezia
+        <p><a href="https://steamcommunity.com/app/1677770/discussions/0/3833171785699386747/">voltamper
                 (Traduction Russe)</a></p>
 
         <h4>SIGNALEMENT ET CORRECTION DE PROBLEMES</h4>
