--- a/download.html
+++ b/download.html
@@ -39,6 +39,19 @@
                 <p>2.0.1a</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.2.1/TheCaseOfTheGoldenIdol-2.0.1a_FR-2.2.1.zip">2.2.1</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Epilogue : Panneau de réflexion : membres de -> membres, étant dans</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.1a</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.2.0/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.2.0.zip">2.2.0</a>
                 </p>
                 <div>
@@ -490,6 +503,20 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.6</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.2.1/TheCaseOfTheGoldenIdol-2.0.6_FR-2.2.1.zip">2.2.1</a>
+                </p>
+                <div>
+                    <p>Prise en compte des changements apportés par la version 2.0.6</p>
+                    Changements mineurs :
+                    <ul>
+                        <li>Epilogue : Panneau de réflexion : membres de -> membres, étant dans</li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
